# piscine-python

./: README.md
day00/ex00/: Hello.py
day00/ex01/: format_ft_time.py
day00/ex02/: find_ft_type.py  tester.py
day00/ex03/: NULL_not_found.py  tester.py
day00/ex04/: whatis.py
day00/ex05/: building.py
day00/ex06/: filterstring.py  ft_filter.py
day00/ex07/: sos.py
day00/ex08/: Loading.py
day00/ex09/ft_package/: LICENSE  pyproject.toml
day00/ex09/ft_package/ft_package/: __init__.py  ft_package.py
day01/ex00/: give_bmi.py  tester.py
day01/ex01/: array2D.py
day01/ex02/: load_image.py  tester.py
day01/ex03/: zoom.py
day01/ex04/: load_image.py  rotate.py
day01/ex05/: pimp_image.py
day02/ex00/: load_csv.py
day02/ex01/: aff_life.py  load_csv.py
day02/ex02/: aff_pop.py
day03/ex02/: DiamonTrap.py
day03/ex03/: ft_calculator.py
module00/day00/ex01/: format_ft_time.py
module00/day00/ex02/: find_ft_type.py
module00/day00/ex03/: NULL_not_found.py
module00/day00/ex04/: whatis.py
module00/day00/ex05/: building.py
module00/day00/ex06/: filterstring.py  ft_filter.py
module00/day00/ex08/: Loading.py
module00/day01/ex00/: give_bmi.py
module00/day01/ex01/: array2D.py
module00/day01/ex02/: load_image.py
module00/day01/ex03/: load_image.py  zoom.py
module00/day01/ex04/: rotate.py
module00/day01/ex05/: pimp_image.py
module00/day02/ex00/: load_csv.py
module00/day02/ex03/: projection_life.py
module00/day03/ex01/: S1E7.py
module00/day03/ex02/: S1E9.py
module00/day03/ex04/: ft_calculator.py
module00/day04/ex00/: statistics.py
(+5 files in other folders)
